--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,62 @@
-<p>switches works!</p>
+<h2>Reactive: <small>Switches</small></h2>
+<hr />
+
+<form>
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label"> Genero</label>
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input
+          type="radio"
+          value="M"
+          name="radioGenero"
+          id="radioMasculino"
+          class="form-check-input"
+        />
+        <label for="radioMasculino" class="form-check-label">Masculino</label>
+      </div>
+      <div class="form-check">
+        <input
+          type="radio"
+          value="F"
+          name="radioGenero"
+          id="radioFemenino"
+          class="form-check-input"
+        />
+        <label for="radioFemenino" class="form-check-label">Femenino</label>
+      </div>
+    </div>
+  </div>
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label"> Notificaciones</label>
+    <div class="col-sm-9">
+      <div class="form-check form-switch mt-2">
+        <input
+          type="checkbox"
+          name="notifications"
+          id="flexSwitchCheckChecked"
+          class="form-check-input"
+        />
+        <label for="flexSwitchCheckChecked" class="form-check-label"></label>
+      </div>
+    </div>
+  </div>
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label"></label>
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input type="checkbox" id="flexCheckDefault" class="form-check-input" />
+        <label for="flexCheckDefault" class="form-check-label">
+          Terminos y condiciones</label
+        >
+      </div>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col">
+          <button class="btn btn-primary float-end">
+            Save
+          </button>
+      </div>
+  </div>
+</form>
