--- a/src/app/template/dinamics/dinamics.component.html
+++ b/src/app/template/dinamics/dinamics.component.html
@@ -1,1 +1,71 @@
-<p>dinamics works!</p>
+<h2>Template: <small>Dinamics</small></h2>
+<hr />
+
+<form (ngSubmit)="save()" autocomplete="off" #myForm="ngForm">
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label"> Name</label>
+    <div class="col-sm-9">
+      <input
+        class="input form-control"
+        ngModel
+        required
+        name="name"
+        placeholder="Name"
+      />
+      <span
+        class="form-text text-danger"
+        *ngIf="
+          myForm.controls['name']?.errors && myForm.controls['name']?.touched
+        "
+        >Campo obligatorio
+      </span>
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input
+          class="form-control"
+          [(ngModel)]="newGame"
+            (keyup.enter)="add()"
+          name="newGame"
+          placeholder="Game"
+        />
+        <button class="btn btn-outline-primary" (click)="add()" type="button">Add</button>
+      </div>
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label"> Favs</label>
+    <div class="col-sm-9">
+      <div class=" input-group mb-2" *ngFor="let fav of person.favs; let i = index">
+
+          <input
+          
+          [(ngModel)]="fav.game"
+          name="fav{{ i }}"
+          type="text"
+          
+          class="form-control"
+          />
+          <button class="btn btn-outline-danger" (click)="remove(i)"> Remove </button>
+
+        </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <button
+        type="submit"
+        [disabled]="myForm.invalid"
+        class="btn btn-primary float-end"
+      >
+        Save
+      </button>
+    </div>
+  </div>
+</form>
+
+<span>Person</span>
+<pre>{{person | json}}</pre> 
